Fixed runconfigs and local versions